--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,9 @@ ul li i {
 body {
     background-image: url('https://i.pinimg.com/originals/7f/66/4f/7f664f83ecae1bbe1f82092c159f43e4.jpg');
 }
+
+@media screen and (max-width: 576px) {
+    header img {
+        width: 75%;
+    }
+}
